standby hadoop configuration